tmp/wrong_1640057605.5615628.txt
identifier '_syscall4'	 [StartOfLine]	Loc=<./tmp/code_0.c:1:1>
l_paren '('		Loc=<./tmp/code_0.c:1:10>
int 'int'		Loc=<./tmp/code_0.c:1:11>
comma ','		Loc=<./tmp/code_0.c:1:14>
identifier 'sys_utimensat'		Loc=<./tmp/code_0.c:1:15>
comma ','		Loc=<./tmp/code_0.c:1:28>
int 'int'		Loc=<./tmp/code_0.c:1:29>
comma ','		Loc=<./tmp/code_0.c:1:32>
identifier 'dirfd'		Loc=<./tmp/code_0.c:1:33>
comma ','		Loc=<./tmp/code_0.c:1:38>
const 'const'		Loc=<./tmp/code_0.c:1:39>
char 'char'	 [LeadingSpace]	Loc=<./tmp/code_0.c:1:45>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_0.c:1:50>
comma ','		Loc=<./tmp/code_0.c:1:51>
identifier 'pathname'		Loc=<./tmp/code_0.c:1:52>
comma ','		Loc=<./tmp/code_0.c:1:60>
const 'const'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_0.c:3:11>
struct 'struct'	 [LeadingSpace]	Loc=<./tmp/code_0.c:3:17>
identifier 'timespec'	 [LeadingSpace]	Loc=<./tmp/code_0.c:3:24>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_0.c:3:33>
comma ','		Loc=<./tmp/code_0.c:3:34>
identifier 'tsp'		Loc=<./tmp/code_0.c:3:35>
comma ','		Loc=<./tmp/code_0.c:3:38>
int 'int'		Loc=<./tmp/code_0.c:3:39>
comma ','		Loc=<./tmp/code_0.c:3:42>
identifier 'flags'		Loc=<./tmp/code_0.c:3:43>
r_paren ')'		Loc=<./tmp/code_0.c:3:48>
./tmp/code_0.c:5:2: error: #endif without #if
#endif
 ^
./tmp/code_0.c:7:2: error: #endif without #if
#endif /* CONFIG_UTIMENSAT  */
 ^
./tmp/code_0.c:17:2: error: unterminated conditional directive
#if defined(TARGET_NR_inotify_init) && defined(__NR_inotify_init)
 ^
./tmp/code_0.c:11:2: error: unterminated conditional directive
#ifdef CONFIG_INOTIFY
 ^
eof ''		Loc=<./tmp/code_0.c:25:2>
4 errors generated.
